assertion failure: (!mirror_alive || loader_alive) failed:

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 8
    • Affects Version/s: hs25
    • Component/s: hotspot
    • None
    • gc
    • b117

        # Internal Error (/net/karachi/scratch/jmasa/hg_gc_baseline_ref/src/share/vm/oo
        ps/klass.cpp:391), pid=19600, tid=21
        # assert(!mirror_alive || loader_alive) failed: loader must be alive if the mir
        ror is but not the other way around with anonymous classes
        #

        with -XX:+UseConcMarkSweepGC -XX:-UseCMSCompactAtFullCollection

        -XX:-UseCMSCompactAtFullCollection is necessary to get the failure

              Assignee:
              Jon Masamitsu (Inactive)
              Reporter:
              Jon Masamitsu (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: