8024483: assertion failure: (!mirror_alive || loader_alive) failed:

Reviewed-by: brutisso, tschatzl, mgerdin